--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
         <div id="inputSection" class="bg-white p-6 rounded-xl shadow-lg mb-8">
             <div class="flex flex-col sm:flex-row gap-4">
-                <input type="text" id="jobTitleInput" placeholder="e.g., AI Prompt Engineer, Data Analyst..." class="flex-grow p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
+                <input type="text" id="jobTitleInput" placeholder="e.g., AI Prompt Engineer, Middle School Teacher..." class="flex-grow p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition">
                 <button id="generateBtn" class="bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-700 transition shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                     Generate Curriculum
                 </button>
