--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Curriculum Generator</title>
+    <title>Dynamic AI Curriculum Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -69,7 +69,6 @@
         </div>
     </div>
 
-    <!-- Modal for Gemini Features -->
     <div id="featureModal" class="hidden fixed inset-0 z-50 flex items-center justify-center p-4 modal-overlay">
         <div class="bg-white rounded-xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto">
             <div class="sticky top-0 bg-white p-4 border-b border-gray-200 flex justify-between items-center">
@@ -77,8 +76,7 @@
                 <button id="closeModalBtn" class="text-gray-500 hover:text-gray-800 text-2xl font-bold">&times;</button>
             </div>
             <div id="modalContent" class="p-6 prose max-w-none">
-                <!-- Content will be injected here -->
-            </div>
+                </div>
         </div>
     </div>
 
@@ -199,12 +197,20 @@
                     }
                     updateStepUI(2, 'success');
 
-                    // Step 3: Get Resources for each module (sequentially to avoid overloading)
+                    // Step 3: The "Repeating Loop" for resources
                     updateStepUI(3, 'loading');
                     const populatedModules = [];
                     for (const module of modules) {
-                        const resourcesData = await callApi('3-get-resources', { module });
-                        populatedModules.push({ ...module, resources: resourcesData.resources });
+                        const resources = [];
+                        let attempts = 0;
+                        while(resources.length < 3 && attempts < 5) { // Try 5 times to find 3 unique resources
+                            const { resource } = await callApi('3-get-one-resource', { module });
+                            if (resource && resource.url && !resources.some(r => r.url === resource.url)) {
+                                resources.push(resource);
+                            }
+                            attempts++;
+                        }
+                        populatedModules.push({ ...module, resources });
                     }
                     updateStepUI(3, 'success');
 
