--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,10 @@
 
             const hideModal = () => featureModal.classList.add('hidden');
             
-            // --- API Call Function (with Robust Error Handling) ---
+            // --- Utility Function ---
+            const sleep = (ms) => new Promise(resolve => setTimeout(resolve, ms));
+
+            // --- API Call Function ---
             const callApi = async (endpoint, body) => {
                 const response = await fetch(`/.netlify/functions/${endpoint}`, {
                     method: 'POST',
@@ -211,6 +214,7 @@
                     updateStepUI(2, 'loading');
                     const modules = [];
                     for (const competency of currentCompetencies) {
+                        await sleep(1000); // Small delay between competency calls
                         const moduleData = await callApi('2-get-module-structure', { jobTitle: currentJobTitle, competency });
                         modules.push(moduleData);
                     }
@@ -223,6 +227,8 @@
                         const resources = [];
                         let attempts = 0;
                         while(resources.length < 3 && attempts < 5) {
+                            // THIS IS THE FIX: A much longer delay to respect the 10 requests/minute limit
+                            await sleep(6500); // 6.5 seconds between each resource request
                             const { resource } = await callApi('3-get-one-resource', { module });
                             if (resource && resource.url && !resources.some(r => r.url === resource.url)) {
                                 resources.push(resource);
@@ -284,7 +290,9 @@
                 showModal(`Elaborating on: ${resourceTitle}`, `<div class="flex justify-center p-8"><div class="spinner h-8 w-8"></div></div>`);
                 try {
                     const summary = await callApi('6a-get-summary', { resourceTitle });
+                    await sleep(1000);
                     const takeaways = await callApi('6b-get-takeaways', { resourceTitle });
+                    await sleep(1000);
                     const exercise = await callApi('6c-get-exercise', { resourceTitle });
                     const finalHtml = `<h4>Summary</h4>${summary.htmlContent}<h4>Key Takeaways</h4>${takeaways.htmlContent}<h4>Practical Exercise</h4>${exercise.htmlContent}`;
                     modalContent.innerHTML = finalHtml;
@@ -295,7 +303,9 @@
                 showModal(`Interview Prep Kit for ${currentJobTitle}`, `<div class="flex justify-center p-8"><div class="spinner h-8 w-8"></div></div>`);
                 try {
                     const pitch = await callApi('7a-get-pitch', { jobTitle: currentJobTitle });
+                    await sleep(1000);
                     const behavioral = await callApi('7b-get-behavioral-q', { jobTitle: currentJobTitle });
+                    await sleep(1000);
                     const technical = await callApi('7c-get-technical-q', { jobTitle: currentJobTitle, competencies: currentCompetencies });
                     const finalHtml = `<h2>30-Second Elevator Pitch</h2>${pitch.htmlContent}<h2>Behavioral Questions</h2>${behavioral.htmlContent}<h2>Technical Questions</h2>${technical.htmlContent}`;
                     modalContent.innerHTML = finalHtml;
